--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -42,6 +42,13 @@
             object-fit: contain;
         }
     }
+
+    .post-hero {
+        .post-hero-boxes {
+            box-shadow: 0px 1px 1px grey;
+            padding: 0.7rem;
+        }
+    }
 }
 
 
