--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,13 +1,6 @@
-// Import all of Bootstrap’s CSS
-@use "../scss/variables.scss" as var; // .collapse {
+@use "../scss/variables.scss" as var;
 @import "bootstrap/scss/bootstrap";
 
-// .navbar-nav {
-//     display: flex;
-//     justify-content: center;
-//     font-size: 1rem;
-// }
-// }
 body {
     font-family: 'Poppins', sans-serif;
 }
@@ -48,16 +41,67 @@ body {
         .img-2 {
             object-fit: contain;
         }
+
+        .team {
+            border: 1px solid white;
+            background: #ffffffd0;
+
+            width: fit-content;
+            box-shadow: 0px 3.17px 52.3px 0px #0000001A;
+
+            backdrop-filter: blur(38.525951385498047px);
+
+            padding-left: 1rem;
+
+            h4 {
+                font-size: 1rem;
+            }
+
+            margin-top: -3rem;
+
+            .team-create {
+
+
+                .team-pics2 {
+                    margin-left: -1.1rem;
+
+                }
+
+                .team-pics3 {
+                    margin-left: -1rem;
+
+                }
+
+                .team-pics3 {
+                    margin-left: -1rem;
+
+                }
+
+                .team-pics4 {
+                    margin-left: -1.1rem;
+
+                }
+
+                .team-pics5 {
+                    margin-left: -1.1rem;
+
+                }
+            }
+        }
     }
 
     .post-hero {
         .post-hero-boxes {
-            box-shadow: 0px 1px 1px grey;
-            padding: 0.7rem;
+            // box-shadow: 0px 1px 1px grey;
+            box-shadow: 0px 17px 33px -14px #02160512;
+
+            padding: 2rem;
         }
     }
 
     .optimising {
+        margin-top: 6rem;
+
         h3 {
             font-size: 2rem;
             font-weight: 400;
@@ -126,6 +170,8 @@ body {
     }
 
     .plans {
+        padding-top: 2rem;
+
         .plans-txt {
             h3 {
                 font-size: 2.3rem;
@@ -138,7 +184,8 @@ body {
             .plans-box {
                 background-color: white;
                 padding-top: 1.4rem;
-                padding: 2rem 2rem 0rem 2rem;
+                padding: 2rem 1rem 0rem 1rem;
+                // margin-right: 1rem;
 
                 h4 {
                     font-size: 22px;
@@ -149,7 +196,12 @@ body {
                     span {
                         font-size: 1rem;
                     }
+
+                    .dollar {
+                        vertical-align: top;
+                    }
                 }
+
 
                 button {
                     font-size: 0.8rem;
@@ -166,6 +218,8 @@ body {
             .plans-box:hover {
                 background-color: #6F77F1;
                 color: white;
+                transform: scale(1.11);
+                transition: 0.2s transform;
 
                 h4,
                 h3,
@@ -183,7 +237,8 @@ body {
     .exp-team {
         .exp-txt {
             h3 {
-                font-size: 2.4rem;
+                font-size: 2.3rem;
+                font-weight: 400;
 
                 span {
                     color: #6F77F1;
@@ -193,10 +248,55 @@ body {
             .members {
 
                 border: 1px solid rgb(198, 197, 197);
+
+                h4 {
+                    font-size: 1.1rem;
+                }
+
+                p {
+                    padding: 0.5rem;
+                }
             }
 
         }
     }
+
+    .exp-team {
+        .members:hover {
+            h4 {
+                color: #6F77F1;
+
+            }
+
+            transform: scale(1.11);
+            transition: 0.5s transform;
+        }
+    }
+
+    .dot {
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        display: inline-block;
+    }
+
+    .red-dot {
+        background-color: #D9534F;
+    }
+
+    .green-dot {
+        background-color: #5CB85C;
+    }
+
+    .yellow-dot {
+        background-color: #F0AD4E;
+    }
+
+    .stats-wrapper {
+        max-width: 900px;
+        margin: 0 auto;
+    }
+
 }
 
 .testimonials-section {
@@ -425,6 +525,13 @@ body {
             }
         }
     }
+
+    // .hero-section {
+    //     .team {
+    //         padding-left: 2rem;
+
+    //     }
+    // }
 }
 
 @media screen and (min-width:1024px) {
